[gd_scene load_steps=9 format=4 uid="uid://bpylit2vi7ewk"]

[ext_resource type="Script" uid="uid://lsfhptn17nqx" path="res://scripts/main.gd" id="1_b2b57"]
[ext_resource type="Texture2D" uid="uid://bv3od7dxw6lut" path="res://assets/Sprites.png" id="1_puhri"]
[ext_resource type="PackedScene" uid="uid://bov22kqd0a674" path="res://scenes/player.tscn" id="2_mm0hx"]
[ext_resource type="PackedScene" uid="uid://cqjc62a5su4ei" path="res://scenes/hud.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://dd30q6pl2mil3" path="res://scenes/game_over.tscn" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cb8hn6t0rn3ra" path="res://scenes/level_start.tscn" id="6_tefeu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lnvhd"]
texture = ExtResource("1_puhri")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
2:4/0 = 0
7:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
2:5/0 = 0
7:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
2:7/0 = 0
7:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
2:8/0 = 0
7:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
2:9/0 = 0
7:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
2:10/0 = 0
7:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
2:12/0 = 0
7:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
2:13/0 = 0
7:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0

[sub_resource type="TileSet" id="TileSet_gfx4h"]
physics_layer_0/collision_layer = 6
physics_layer_0/collision_mask = 9
sources/0 = SubResource("TileSetAtlasSource_lnvhd")

[node name="main" type="Node"]
script = ExtResource("1_b2b57")

[node name="Root" type="Node2D" parent="."]
position = Vector2(0, 24)

[node name="TileMapLayer" type="TileMapLayer" parent="Root"]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAMAAAAAAAEAAAADAAMAAAAAAAIAAAADAAMAAAAAAAMAAAADAAMAAAAAAAQAAAADAAMAAAAAAAUAAAADAAMAAAAAAAYAAAADAAMAAAAAAAcAAAADAAMAAAAAAAgAAAADAAMAAAAAAAkAAAADAAMAAAAAAAoAAAADAAMAAAABAAAAAAADAAMAAAACAAAAAAADAAMAAAADAAAAAAADAAMAAAAEAAAAAAADAAMAAAAFAAAAAAADAAMAAAAGAAAAAAADAAMAAAAHAAAAAAADAAMAAAAIAAAAAAADAAMAAAAJAAAAAAADAAMAAAAKAAAAAAADAAMAAAALAAAAAAADAAMAAAAMAAAAAAADAAMAAAARAAAAAAADAAMAAAASAAAAAAADAAMAAAATAAAAAAADAAMAAAAUAAAAAAADAAMAAAAVAAAAAAADAAMAAAACAAIAAAADAAMAAAACAAQAAAADAAMAAAACAAYAAAADAAMAAAACAAgAAAADAAMAAAACAAoAAAADAAMAAAAAAAsAAAADAAMAAAAAAAwAAAADAAMAAAABAAwAAAADAAMAAAACAAwAAAADAAMAAAADAAwAAAADAAMAAAAEAAwAAAADAAMAAAAFAAwAAAADAAMAAAAGAAwAAAADAAMAAAAHAAwAAAADAAMAAAAIAAwAAAADAAMAAAAJAAwAAAADAAMAAAAKAAwAAAADAAMAAAALAAwAAAADAAMAAAAMAAwAAAADAAMAAAANAAwAAAADAAMAAAAOAAwAAAADAAMAAAAPAAwAAAADAAMAAAAQAAwAAAADAAMAAAARAAwAAAADAAMAAAASAAwAAAADAAMAAAATAAwAAAADAAMAAAAUAAwAAAADAAMAAAAVAAwAAAADAAMAAAAEAAIAAAADAAMAAAAGAAIAAAADAAMAAAAIAAIAAAADAAMAAAAKAAIAAAADAAMAAAAMAAIAAAADAAMAAAAOAAIAAAADAAMAAAAQAAIAAAADAAMAAAASAAIAAAADAAMAAAAUAAIAAAADAAMAAAAWAAIAAAADAAMAAAAYAAIAAAADAAMAAAAaAAIAAAADAAMAAAAcAAIAAAADAAMAAAAWAAAAAAADAAMAAAAXAAAAAAADAAMAAAAYAAAAAAADAAMAAAAZAAAAAAADAAMAAAAaAAAAAAADAAMAAAAbAAAAAAADAAMAAAAcAAAAAAADAAMAAAAdAAAAAAADAAMAAAAeAAAAAAADAAMAAAAeAAEAAAADAAMAAAAeAAIAAAADAAMAAAAeAAMAAAADAAMAAAAeAAQAAAADAAMAAAAeAAUAAAADAAMAAAAeAAYAAAADAAMAAAAeAAcAAAADAAMAAAAWAAwAAAADAAMAAAAXAAwAAAADAAMAAAAYAAwAAAADAAMAAAAZAAwAAAADAAMAAAAaAAwAAAADAAMAAAAbAAwAAAADAAMAAAAcAAwAAAADAAMAAAAdAAwAAAADAAMAAAAeAAwAAAADAAMAAAAeAAgAAAADAAMAAAAeAAkAAAADAAMAAAAeAAoAAAADAAMAAAAeAAsAAAADAAMAAAAEAAoAAAADAAMAAAAIAAoAAAADAAMAAAAKAAoAAAADAAMAAAAMAAoAAAADAAMAAAAOAAoAAAADAAMAAAASAAoAAAADAAMAAAAUAAoAAAADAAMAAAAWAAoAAAADAAMAAAAYAAoAAAADAAMAAAAaAAoAAAADAAMAAAAcAAoAAAADAAMAAAAcAAgAAAADAAMAAAAaAAgAAAADAAMAAAAYAAgAAAADAAMAAAAWAAgAAAADAAMAAAAUAAgAAAADAAMAAAASAAgAAAADAAMAAAAQAAgAAAADAAMAAAAOAAgAAAADAAMAAAAMAAgAAAADAAMAAAAKAAgAAAADAAMAAAAIAAgAAAADAAMAAAAGAAgAAAADAAMAAAAEAAgAAAADAAMAAAAEAAYAAAADAAMAAAAGAAYAAAADAAMAAAAIAAYAAAADAAMAAAAKAAYAAAADAAMAAAAMAAYAAAADAAMAAAAOAAYAAAADAAMAAAAQAAYAAAADAAMAAAASAAYAAAADAAMAAAAUAAYAAAADAAMAAAAWAAYAAAADAAMAAAAYAAYAAAADAAMAAAAaAAYAAAADAAMAAAAcAAYAAAADAAMAAAAcAAQAAAADAAMAAAAaAAQAAAADAAMAAAAYAAQAAAADAAMAAAAWAAQAAAADAAMAAAAUAAQAAAADAAMAAAASAAQAAAADAAMAAAAQAAQAAAADAAMAAAAOAAQAAAADAAMAAAAMAAQAAAADAAMAAAAKAAQAAAADAAMAAAAIAAQAAAADAAMAAAAGAAQAAAADAAMAAAANAAAAAAADAAMAAAAOAAAAAAADAAMAAAAPAAAAAAADAAMAAAAQAAAAAAADAAMAAAAGAAoAAAADAAMAAAAEAAQAAAADAAMAAAAQAAoAAAADAAMAAAA=")
tile_set = SubResource("TileSet_gfx4h")

[node name="BrickWalls" type="Node2D" parent="Root"]

[node name="Bombs" type="Node2D" parent="Root"]

[node name="Explosions" type="Node2D" parent="Root"]

[node name="Player" parent="Root" node_paths=PackedStringArray("bombs_container", "explosions_container") instance=ExtResource("2_mm0hx")]
unique_name_in_owner = true
position = Vector2(24, 24)
bombs_container = NodePath("../Bombs")
explosions_container = NodePath("../Explosions")

[node name="Enemies" type="Node2D" parent="Root"]

[node name="GameTimer" type="Timer" parent="Root"]

[node name="Hud" parent="." instance=ExtResource("4_jyhfs")]

[node name="LevelStart" parent="." instance=ExtResource("6_tefeu")]
visible = false

[node name="GameOver" parent="." instance=ExtResource("5_tbgi4")]
visible = false
